--- a/src/blocks/profile/__name/profile__name.css
+++ b/src/blocks/profile/__name/profile__name.css
@@ -10,7 +10,7 @@
     white-space: nowrap;
 }
 
-@media screen and (max-width: 879px) {
+@media screen and (max-width: 899px) {
     .profile__name {
         font-size: 27px;
         line-height: 33px;
