--- a/src/blocks/profile/__occupation/profile__occupation.css
+++ b/src/blocks/profile/__occupation/profile__occupation.css
@@ -10,7 +10,7 @@
     white-space: nowrap;
 }
 
-@media screen and (max-width: 879px) {
+@media screen and (max-width: 899px) {
     .profile__occupation {
         max-width: 282px;
         font-size: 14px;
