--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -6,7 +6,7 @@
     padding: 40px 0 0;
 }
 
-@media screen and (max-width: 879px) {
+@media screen and (max-width: 899px) {
     .profile {
         max-width: 282px;
         flex-direction: column;
